# jschon-translation

./: .coveragerc  .gitignore  .gitmodules  README.rst  setup.cfg  tox.ini
.github/workflows/: tests.yml
jschon_translation/: __init__.py  catalog.py  vocab.py
tests/: conftest.py  test_examples.py  test_suite.py  test_translation.py
