[metadata]
name = jschon-translation
version = 0.0.1
description = JSON Schema-based JSON document translation
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
url = https://github.com/marksparkza/jschon-translation
author = Mark Jacobson
author_email = mark@saeon.ac.za
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = ~=3.8
install_requires =
    jschon @ git+https://github.com/marksparkza/jschon.git@main

[options.extras_require]
dev =
    pytest
    coverage
test =
    tox

[options.packages.find]
exclude =
    tests

[options.package_data]
jschon_translation = LICENSE, *.rst
